[package]
name = "event-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6.1"
serde =  { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
futures = "0.3"
reqwest = "0.11.10"
scraper = "0.13.0"
chrono = "0.4"
chrono-tz = "0.6"

[dependencies.mongodb]
version = "2.2.1"
default-features = false
features = ["sync"]
