[package]
edition = "2021"
name = "horse-ai-analytics-api-prod"
version = "0.1.0"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.6.0"
async-graphql = {version = "7.0.5", features = ["decimal"]}
async-graphql-actix-web = "7.0.5"
chrono = "0.4.37"
chrono-tz = "0.8.6"
google-oauth = "1.10.2"
jsonwebtoken = "9"
mongodb = "2.8.2"
oauth2 = "4.4.2"
scraper = "0.19.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.115"
shuttle-actix-web = "0.43.0"
shuttle-runtime = "0.43.0"
shuttle-secrets = "0.42.0"
shuttle-service = "0.44.0"
tokio = "1.26.0"
url = "2.5.0"
reqwest = { version = "0.12", features = ["json"] }
phf = { version = "0.11", default-features = false }
regex = "1.10.4"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"

[dependencies.uuid]
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
version = "1.8.0"
