[package]
edition = "2021"
name = "novel-management-api"
version = "0.1.0"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.4"
sea-orm = {version = "1.1.16", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"]}
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
tokio = "1.47.1"
thiserror = "2.0.16"
reqwest = { version = "0.12.23", features = ["json"] }
google-oauth = "1.11.3"
oauth2 = "5.0.0"
serde = {version = "1.0.219", features = ["derive"]}
chrono = "0.4.42"
chrono-tz = "0.10.4"
jsonwebtoken = "9"
entity = { path = "./entity" }
tower-http={version="0.6.6", features=["cors"]}

[dependencies.uuid]
version = "1.18.1"
features = [
    "v7",
]

[profile.dev]
debug = true
opt-level = 0
