[package]
name = "wasm-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-Crelocation-model=pic"]

[lib]
crate-type=["cdylib"]

[dependencies]
wasm-bindgen="0.2"
getrandom = { version = "0.2", features = ["js"] }
zstd = { version = "0.12", default-features = false }
zip = { version = "0.6.6", default-features = false }
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome", features = ["fetch"]}
